--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <script src="js/Bmob-1.6.7.min.js"></script>
-    <style>
-      html,body{
-        height: 100%;
-      }
-    </style>
-    <title>graduation-project</title>
+    <title>广药课酬管理系统</title>
   </head>
   <body>
     <noscript>
