--- a/for_user/public/index.html
+++ b/for_user/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <script async src="./Bmob-1.6.7.min.js"></script>
+    <script src="./Bmob-1.6.7.min.js"></script>
     <title>Mand Mobile</title>
     <script>
       (function(window, document) {
